# detectcharset

./: .gitignore  CMakeLists.txt  README.md  flake.nix  main.c  main.cpp
